<resources>
    <!-- App -->
    <string name="app_name">BrickController</string>

    <!-- Common -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="loading">Loading...</string>
    <string name="saving">Saving...</string>
    <string name="edit">Edit</string>
    <string name="rename">Rename</string>
    <string name="remove">Remove</string>
    <string name="removing">Removing...</string>
    <string name="updating">Updating...</string>
    <string name="connecting">Connecting...</string>
    <string name="reconnecting">Reconnecting...</string>
    <string name="disconnecting">Disconnecting...</string>
    <string name="error">Error</string>
    <string name="are_you_sure_you_want_to_remove">Are you sure you want to remove?</string>
    <string name="location_alert_title">Location access is needed.</string>
    <string name="location_alert_message">Please grant location access to be able to communicate with bluetooth devices.</string>
    <string name="type">Type</string>
    <string name="device_name">Device name</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="address">Address</string>
    <string name="failed_to_connect">Failed to connect.</string>
    <string name="ble_not_supported">Your device does not support bluetooth low energy.</string>
    <string name="default_controller_profile_name">Default profile</string>
    <string name="version">Version</string>

    <!-- Creation list activity -->
    <string name="title_activity_creation_list">Creation list</string>
    <string name="error_during_loading_devices">Error during loading devices.</string>
    <string name="error_during_loading_creations">Error during loading creations.</string>
    <string name="error_during_adding_creation">Error during adding creation.</string>
    <string name="error_during_removing_creation">Error during removing creation.</string>
    <string name="add_creation">Please add a creation</string>
    <string name="enter_creation_name">Enter the creation name</string>
    <string name="creation_name_empty">Creation name can not be empty.</string>
    <string name="creation_name_exists">There is already a creation with this name.</string>
    <string name="default_controller_profile">Default controller profile</string>

    <string name="device_management">Device management</string>
    <string name="settings">Settings</string>
    <string name="controller_tester">Game pad tester</string>
    <string name="about">About</string>

    <!-- Device list activity -->
    <string name="title_activity_device_list">Devices</string>
    <string name="scan">Scan</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="are_you_sure_you_want_to_remove_all_devices">Are you sure you want to remove all the devices?</string>
    <string name="error_during_scanning_for_devices">Error during scanning for devices.</string>
    <string name="error_during_saving_devices">Error during saving devices.</string>
    <string name="error_during_removing_devices">Error during removing devices.</string>
    <string name="device_type_is_not_supported_yet">This type of device is not supported yet.</string>
    <string name="scan_devices">Please scan for devices</string>
    <string name="enter_device_name">Enter device name</string>

    <!-- Device details activity -->
    <string name="title_activity_device_details">Device details</string>
    <string name="error_during_updating_device">Error during updating device.</string>
    <string name="error_during_removing_device">Error during removing device.</string>
    <string name="new_name">New name:</string>
    <string name="name_cannot_be_empty">The name cannot be empty.</string>
    <string name="output_level">Output level</string>
    <string name="low">Low</string>
    <string name="normal">Normal</string>
    <string name="high">High</string>
    <string name="ludicrous">Ludicrous</string>

    <!-- Creation details activity -->
    <string name="title_activity_creation_details">Creation details</string>
    <string name="play">Play</string>
    <string name="creation_name">Creation name:</string>
    <string name="controller_profiles">Controller profiles:</string>
    <string name="enter_controller_profile_name">Enter the controller profile name</string>
    <string name="controller_profile_name_empty">Controller profile name can not be empty.</string>
    <string name="controller_profile_name_exists">There is already a controller profile with this name.</string>
    <string name="error_during_updating_creation">Error during updating creation.</string>
    <string name="error_during_adding_controller_profile">Error during adding controller profile.</string>
    <string name="error_during_removing_controller_profile">Error during removing controller profile.</string>
    <string name="add_controller_profile">Please add a controller profile</string>
    <string name="no_controller_actions">No controller actions have been added to this creation yet. Please add at least one controller profile, then events with controller actions.</string>
    <string name="missing_device">Some of the referenced devices are missing.</string>

    <!-- Controller profile details activity -->
    <string name="title_activity_controller_profile_details">Controller profile details</string>
    <string name="controller_profile_name">Controller profile name</string>
    <string name="controller_events">Controller events:</string>
    <string name="press_controller_button">Press a button on the controller</string>
    <string name="error_during_updating_controller_profile">Error during updating controller profile.</string>
    <string name="error_during_adding_controller_event">Error during adding controller event.</string>
    <string name="error_during_removing_controller_event">Error during removing controller event.</string>
    <string name="add_controller_event">Please add controller events.</string>
    <string name="no_devices">Please scan for devices first.</string>
    <string name="device_not_found">The referenced device is missing.</string>

    <!-- Controller action activity -->
    <string name="title_activity_controller_action">Controller action</string>
    <string name="devices">Devices</string>
    <string name="invert_channel">Invert channel</string>
    <string name="toggle_button">Toggle button</string>
    <string name="max_output">Max output</string>
    <string name="controller_action_exists">The same device and channel has already been configured.</string>
    <string name="error_during_adding_controller_action">Error during adding controller action.</string>
    <string name="error_during_updating_controller_action">Error during updating controller action.</string>

    <!-- Controller activity -->
    <string name="title_activity_controller">Controller</string>

    <!-- About activity -->
    <string name="title_activity_about">About</string>

    <!-- Controller tester activity -->
    <string name="title_activity_controller_tester">Controller tester</string>
    <string name="press_buttons_on_controller">Press buttons and move sticks on the controller.</string>

    <!-- Settings activity -->
    <string name="title_activity_settings">BrickController settings</string>
    <string name="title_infrared_device">Infra-red device</string>
    <string name="infrared_built_in_or_none">Built in or none</string>
    <string name="infrared_audio_output">Audio output</string>
</resources>
